[package]
name = "global-clock"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.7", features = ["derive"] }
chrono = "0.4"
env_logger = "0.9"
glam = "0.17"
image = "0.23"
instant = "0.1"
once_cell = "1.8"
pollster = "0.2"
tiny-skia = "0.5"
wgpu = "0.9"
winit = "0.25"

[profile.dev]
opt-level = 3
