[package]
name = "global-clock"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bundled-assets = []

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.13", features = ["derive"] }
chrono = "0.4"
env_logger = "0.10"
glam = "0.24"
image = "0.24"
instant = "0.1"
once_cell = "1.18"
pollster = "0.3"
tiny-skia = "0.11"
wgpu = "0.17"
winit = "0.28"

[profile.dev]
opt-level = 3
